--- a/css/responsive.css
+++ b/css/responsive.css
@@ -129,7 +129,6 @@
 
     .left_main {  width: 35%; }
 
-p.about_lorem { display: none;}
 .about_middle { display: none;}
 
 }
@@ -203,7 +202,7 @@ width: 30%;
          padding-left: 15px;
     }
 
-.lorem_text  { display: none;}
+
 .header_section { background-size: cover; }
 .about_text { padding-top: 0px; width: 93%;}
 .about_middle { width: 82%; margin-top: 135px; margin-left: 30px; }
@@ -374,14 +373,14 @@ ul.link li {
 }
 
 
-.boynow_bt { display: none;}
-.contact_bt { display: none;}
-.lorem_text { display: none;}
+.boynow_bt { font-size: 18px;}
+.contact_bt { font-size: 18px;}
+.sport_text { font-size: 40pt;}
 .search_icon { display: none;}
 .header_section { padding-right: 0px; background-size: cover;}
 .banner_section { padding-top: 0px; padding-bottom: 0px;}
-.about_lorem { display: none;}
-p.about_lorem { display: none;}
+
+
 .red_bt { top: -35px; left: -20px;}
 .read_more { width: 42%; font-size: 17px; }
 .about_img { top: -8px;}
@@ -395,7 +394,7 @@ p.about_lorem { display: none;}
 .about_middle { display: none;}
 .logo { width: 50%; float: left; text-align: left; padding-left: 0px; }
 .shoping_bag { display: none;}
-.togle_main { width: 100%; float: right; text-align: right; position: relative;left: 86px;top: -89px; padding-left: 0px; }
+.togle_main { width: 100%; float: right; text-align: right; position: relative;left: 86px;top: -64px; padding-left: 0px; }
 .menu_main { display: none; }
 .right_main { width: 70%; }
 
